sonarcloud on: OrderOverviewAdapter